--- a/Billy_frogs.ipynb
+++ b/Billy_frogs.ipynb
@@ -67,9 +67,7 @@
    "source": [
     "### Accessing the GBIF API\n",
     "\n",
-    "As previously mentioned, the frog location data will be accessed directly from the GBIF API, the documentation of which can be found [here](https://www.gbif.org/developer/summary). We will interface with this API using the Python `requests` module.\n",
-    "\n",
-    "We will be utilising the GBIF API's 'search' service which is specified by the URL `https://api.gbif.org/v1/occurrence/search`. Later we will pass parameters to this service, but for now we can test it out by fetching the first 20 results of the database. This is done with the `get` method of the requests module."
+    "As previously mentioned, the frog location data will be accessed directly from the GBIF API, the documentation of which can be found [here](https://www.gbif.org/developer/summary). We will be utilising the GBIF API's 'search' service which is specified by the URL `https://api.gbif.org/v1/occurrence/search`, which we can interface with through the Python `requests` module. Later we will pass parameters to this service, but for now we can test it out by fetching the first 20 results of the database (20 records is the default limit, which we will learn how to change later). This is done with the `get` method of the requests module."
    ]
   },
   {
@@ -82,99 +80,96 @@
      "output_type": "stream",
      "text": [
       "Status: 200\n",
-      "Records returned: 20 of 1931217773\n",
+      "Records returned: 20 of 1931229601\n",
       "First record: {\n",
-      "    \"acceptedScientificName\": \"Passer domesticus (Linnaeus, 1758)\",\n",
-      "    \"acceptedTaxonKey\": 5231190,\n",
-      "    \"associatedReferences\": \"https://www.artsobservasjoner.no/Sighting/28271554\",\n",
-      "    \"basisOfRecord\": \"HUMAN_OBSERVATION\",\n",
-      "    \"behavior\": \"stationary\",\n",
-      "    \"catalogNumber\": \"28271554\",\n",
+      "    \"acceptedScientificName\": \"Puffinus gravis (O'Reilly, 1818)\",\n",
+      "    \"acceptedTaxonKey\": 5229343,\n",
+      "    \"associatedReferences\": \"[{\\\"crossref\\\":{\\\"citeinfo\\\":{\\\"origin\\\":\\\"Coyne, M. S., and B. J. Godley\\\",\\\"pubdate\\\":\\\"2005\\\",\\\"title_html\\\":\\\"Satellite Tracking and Analysis Tool (STAT): an integrated system for archiving, analyzing and mapping animal tracking data\\\",\\\"title\\\":\\\"Satellite Tracking and Analysis Tool (STAT): an integrated system for archiving, analyzing and mapping animal tracking data\\\",\\\"serinfo\\\":{\\\"sername\\\":\\\"Marine Ecology Progress Series\\\",\\\"issue\\\":\\\"Vol. 301: 1-7\\\"},\\\"onlink\\\":\\\"http:\\\\/\\\\/www.int-res.com\\\\/abstracts\\\\/meps\\\\/v301\\\\/feature\\\\/\\\"}}},{\\\"crossref\\\":{\\\"citeinfo\\\":{\\\"origin\\\":\\\"Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach\\\",\\\"pubdate\\\":\\\"2009\\\",\\\"title_html\\\":\\\"OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions\\\",\\\"title\\\":\\\"OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions\\\",\\\"serinfo\\\":{\\\"sername\\\":\\\"Oceanography\\\",\\\"issue\\\":\\\"22(2):104-115\\\"},\\\"onlink\\\":\\\"http:\\\\/\\\\/www.tos.org\\\\/oceanography\\\\/article\\\\/obis-seamap-the-world-data-center-for-marine-mammal-sea-bird-and-sea-turtle\\\"}}}];http://www.seaturtle.org/tracking/index.shtml?project_id=891\",\n",
+      "    \"basisOfRecord\": \"MACHINE_OBSERVATION\",\n",
+      "    \"bibliographicCitation\": \"[{\\\"crossref\\\":{\\\"citeinfo\\\":{\\\"origin\\\":\\\"Coyne, M. S., and B. J. Godley\\\",\\\"pubdate\\\":\\\"2005\\\",\\\"title_html\\\":\\\"Satellite Tracking and Analysis Tool (STAT): an integrated system for archiving, analyzing and mapping animal tracking data\\\",\\\"title\\\":\\\"Satellite Tracking and Analysis Tool (STAT): an integrated system for archiving, analyzing and mapping animal tracking data\\\",\\\"serinfo\\\":{\\\"sername\\\":\\\"Marine Ecology Progress Series\\\",\\\"issue\\\":\\\"Vol. 301: 1-7\\\"},\\\"onlink\\\":\\\"http:\\\\/\\\\/www.int-res.com\\\\/abstracts\\\\/meps\\\\/v301\\\\/feature\\\\/\\\"}}},{\\\"crossref\\\":{\\\"citeinfo\\\":{\\\"origin\\\":\\\"Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach\\\",\\\"pubdate\\\":\\\"2009\\\",\\\"title_html\\\":\\\"OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions\\\",\\\"title\\\":\\\"OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions\\\",\\\"serinfo\\\":{\\\"sername\\\":\\\"Oceanography\\\",\\\"issue\\\":\\\"22(2):104-115\\\"},\\\"onlink\\\":\\\"http:\\\\/\\\\/www.tos.org\\\\/oceanography\\\\/article\\\\/obis-seamap-the-world-data-center-for-marine-mammal-sea-bird-and-sea-turtle\\\"}}}]  Halpin, P.N., A.J. Read, E. Fujioka, B.D. Best, B. Donnelly, L.J. Hazen, C. Kot, K. Urian, E. LaBrecque, A. Dimatteo, J. Cleary, C. Good, L.B. Crowder, and K.D. Hyrenbach. 2009. OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions. Oceanography 22(2):104-115\",\n",
+      "    \"catalogNumber\": \"985_166051\",\n",
       "    \"class\": \"Aves\",\n",
       "    \"classKey\": 212,\n",
-      "    \"collectionCode\": \"so2-birds\",\n",
-      "    \"coordinateUncertaintyInMeters\": 23.0,\n",
-      "    \"country\": \"Norway\",\n",
-      "    \"countryCode\": \"NO\",\n",
-      "    \"county\": \"Troms og Finnmark\",\n",
-      "    \"crawlId\": 188,\n",
-      "    \"datasetKey\": \"b124e1e0-4755-430f-9eab-894f25a9b59c\",\n",
+      "    \"collectionCode\": \"985\",\n",
+      "    \"coordinatePrecision\": 1.0,\n",
+      "    \"coordinateUncertaintyInMeters\": 111319.49,\n",
+      "    \"crawlId\": 39,\n",
+      "    \"datasetID\": \"985\",\n",
+      "    \"datasetKey\": \"ae1cd68b-da5f-4f51-aeb3-78ac0f72ba41\",\n",
+      "    \"datasetName\": \"Stellwagen Shearwater Tagging 2018\",\n",
+      "    \"dateIdentified\": \"2022-01-01T17:42:34\",\n",
       "    \"day\": 1,\n",
-      "    \"decimalLatitude\": 69.689345,\n",
-      "    \"decimalLongitude\": 18.610506,\n",
-      "    \"dynamicProperties\": \"{\\\"Activity\\\":\\\"Call\\\"}\",\n",
-      "    \"eventDate\": \"2022-01-01T00:00:00\",\n",
-      "    \"eventTime\": \"8.27\",\n",
+      "    \"decimalLatitude\": -42.5,\n",
+      "    \"decimalLongitude\": -42.5,\n",
+      "    \"dynamicProperties\": \"MachineObservation\",\n",
+      "    \"eventDate\": \"2022-01-01T17:42:34\",\n",
       "    \"extensions\": {},\n",
       "    \"facts\": [],\n",
-      "    \"family\": \"Passeridae\",\n",
-      "    \"familyKey\": 5264,\n",
-      "    \"fieldNotes\": \"Activity: Call.\",\n",
-      "    \"gadm\": {\n",
-      "        \"level0\": {\n",
-      "            \"gid\": \"NOR\",\n",
-      "            \"name\": \"Norway\"\n",
-      "        },\n",
-      "        \"level1\": {\n",
-      "            \"gid\": \"NOR.17_1\",\n",
-      "            \"name\": \"Troms\"\n",
-      "        },\n",
-      "        \"level2\": {\n",
-      "            \"gid\": \"NOR.17.25_1\",\n",
-      "            \"name\": \"Troms\\u00f8\"\n",
-      "        }\n",
-      "    },\n",
-      "    \"gbifID\": \"3424215327\",\n",
-      "    \"genericName\": \"Passer\",\n",
-      "    \"genus\": \"Passer\",\n",
-      "    \"genusKey\": 2492321,\n",
+      "    \"family\": \"Procellariidae\",\n",
+      "    \"familyKey\": 9339,\n",
+      "    \"gadm\": {},\n",
+      "    \"gbifID\": \"3341927788\",\n",
+      "    \"genericName\": \"Puffinus\",\n",
+      "    \"genus\": \"Puffinus\",\n",
+      "    \"genusKey\": 5229335,\n",
       "    \"geodeticDatum\": \"WGS84\",\n",
-      "    \"hostingOrganizationKey\": \"d3978a37-635a-4ae3-bb85-7b4d41bc0b88\",\n",
+      "    \"georeferencedDate\": \"2022-01-01T17:42:34/2022-01-01T17:42:34\",\n",
+      "    \"hostingOrganizationKey\": \"67b2263f-6990-4d9d-b32b-20aa72ef4fbc\",\n",
+      "    \"identificationRemarks\": \"Identification Type:Telemetry\",\n",
       "    \"identifiedByIDs\": [],\n",
-      "    \"identifier\": \"urn:uuid:3b298a41-d942-4ebe-b4f1-73d6b4f2f610\",\n",
+      "    \"identifier\": \"985_166051\",\n",
       "    \"identifiers\": [],\n",
-      "    \"individualCount\": 2,\n",
-      "    \"installationKey\": \"7bdf9f6d-317a-45ec-8bb7-7ff61345d6a6\",\n",
-      "    \"institutionCode\": \"nof\",\n",
+      "    \"individualCount\": 1,\n",
+      "    \"installationKey\": \"beeeddea-c02a-43d5-aec7-b534daca34d6\",\n",
+      "    \"institutionCode\": \"Stellwagen Bank National Marine Sanctuary\",\n",
       "    \"isInCluster\": false,\n",
       "    \"issues\": [\n",
-      "        \"COORDINATE_ROUNDED\",\n",
+      "        \"GEODETIC_DATUM_INVALID\",\n",
       "        \"GEODETIC_DATUM_ASSUMED_WGS84\"\n",
       "    ],\n",
       "    \"iucnRedListCategory\": \"LC\",\n",
-      "    \"key\": 3424215327,\n",
+      "    \"key\": 3341927788,\n",
       "    \"kingdom\": \"Animalia\",\n",
       "    \"kingdomKey\": 1,\n",
-      "    \"lastCrawled\": \"2022-01-08T23:01:43.137+00:00\",\n",
-      "    \"lastInterpreted\": \"2022-01-09T22:57:56.721+00:00\",\n",
-      "    \"lastParsed\": \"2022-01-09T22:57:56.721+00:00\",\n",
-      "    \"license\": \"http://creativecommons.org/licenses/by/4.0/legalcode\",\n",
-      "    \"locality\": \"Ersfjordveien, Troms\\u00f8, Tf\",\n",
-      "    \"locationID\": \"1691468\",\n",
+      "    \"lastCrawled\": \"2022-01-10T14:39:04.062+00:00\",\n",
+      "    \"lastInterpreted\": \"2022-01-10T14:39:24.559+00:00\",\n",
+      "    \"lastParsed\": \"2022-01-10T14:39:24.559+00:00\",\n",
+      "    \"license\": \"http://creativecommons.org/licenses/by-nc/4.0/legalcode\",\n",
       "    \"media\": [],\n",
-      "    \"modified\": \"2022-01-01T08:16:40.000+00:00\",\n",
+      "    \"modified\": \"2022-01-06T22:36:27.000+00:00\",\n",
       "    \"month\": 1,\n",
-      "    \"municipality\": \"Troms\\u00f8\",\n",
-      "    \"occurrenceID\": \"urn:uuid:3b298a41-d942-4ebe-b4f1-73d6b4f2f610\",\n",
+      "    \"networkKeys\": [\n",
+      "        \"2b7c7b4f-4d4f-40d3-94de-c28b6fa054a6\"\n",
+      "    ],\n",
+      "    \"nomenclaturalCode\": \"WoRMS LSID\",\n",
+      "    \"occurrenceID\": \"985_166051\",\n",
+      "    \"occurrenceRemarks\": \"Telemetry locations aggregated per species per 1-degree cell\",\n",
       "    \"occurrenceStatus\": \"PRESENT\",\n",
-      "    \"order\": \"Passeriformes\",\n",
-      "    \"orderKey\": 729,\n",
+      "    \"order\": \"Procellariiformes\",\n",
+      "    \"orderKey\": 7192755,\n",
+      "    \"organismID\": \"112708\",\n",
+      "    \"organismRemarks\": \"Tagged animal. organismID may refer to the ID of the telemetry device.\",\n",
+      "    \"ownerInstitutionCode\": \"Stellwagen Bank National Marine Sanctuary\",\n",
       "    \"phylum\": \"Chordata\",\n",
       "    \"phylumKey\": 44,\n",
       "    \"protocol\": \"DWC_ARCHIVE\",\n",
-      "    \"publishingCountry\": \"NO\",\n",
-      "    \"publishingOrgKey\": \"d3978a37-635a-4ae3-bb85-7b4d41bc0b88\",\n",
-      "    \"recordedBy\": \"Jan H\\u00f6per\",\n",
+      "    \"publishingCountry\": \"US\",\n",
+      "    \"publishingOrgKey\": \"67b2263f-6990-4d9d-b32b-20aa72ef4fbc\",\n",
+      "    \"recordNumber\": \"985_166051\",\n",
       "    \"recordedByIDs\": [],\n",
       "    \"relations\": [],\n",
-      "    \"scientificName\": \"Passer domesticus (Linnaeus, 1758)\",\n",
-      "    \"species\": \"Passer domesticus\",\n",
-      "    \"speciesKey\": 5231190,\n",
-      "    \"specificEpithet\": \"domesticus\",\n",
-      "    \"stateProvince\": \"Troms og Finnmark\",\n",
-      "    \"taxonKey\": 5231190,\n",
+      "    \"scientificName\": \"Puffinus gravis (O'Reilly, 1818)\",\n",
+      "    \"scientificNameID\": \"urn:lsid:marinespecies.org:taxname:137201\",\n",
+      "    \"species\": \"Puffinus gravis\",\n",
+      "    \"speciesKey\": 5229343,\n",
+      "    \"specificEpithet\": \"gravis\",\n",
+      "    \"taxonKey\": 5229343,\n",
       "    \"taxonRank\": \"SPECIES\",\n",
+      "    \"taxonRemarks\": \"Taxon recorded as \\\"Greater Shearwater\\\" by the provider\",\n",
       "    \"taxonomicStatus\": \"ACCEPTED\",\n",
+      "    \"type\": \"Event\",\n",
+      "    \"verbatimEventDate\": \"2022-01-01 17:42:34/2022-01-01 17:42:34\",\n",
+      "    \"vernacularName\": \"Great Shearwater\",\n",
       "    \"year\": 2022\n",
       "}\n"
      ]
@@ -205,7 +200,7 @@
    "source": [
     "### Performing a search query\n",
     "\n",
-    "Now that we know how to perform a basic GET request using the requests module, we can now pass in parameters to refine our search. The query parameters of the search can be parsed into the get request as a dictionary, which we create below. For this demonstration, we will specify all frog occurences from 2020 to 2022 in the Richmond location. \n",
+    "Now that we know how to perform a basic GET request using the requests module, we can pass in parameters to refine our search. The query parameters of the search can be passed to the get request as a python dictionary, which we create below. For this demonstration, we will specify all frog occurences from 2020 to 2022 in the Richmond location. \n",
     "\n",
     "There are a few things to note when specifying parameters:\n",
     "- Ranges are given as a single parameter value by concatenating a lower and an upper value with a comma i.e. \"\\<min_val\\>,\\<max_val\\>\"\n",
@@ -382,6 +377,7 @@
     }
    ],
    "source": [
+    "# Specify query parameters\n",
     "parameters = {\n",
     "    \"year\":\"2020,2022\", # Year range\n",
     "    \"orderKey\":\"952\", # The order Anura (frogs) is indicated by key 952\n",
@@ -408,7 +404,7 @@
    "source": [
     "So far we have only been able to access 20 records at a time. This is specified by the `limit` parameter (which defaults to 20 and cannot be more than 300). If the query has less than 300 results, then all can be retrieved in just one call to the API. However, if a query has more than 300 results we need to make a few sequential calls to the API, setting `limit=300` but varying the `offset` parameter. A limit of 300 and offset of 300, will get the second page of 300 results. So to reach the next page of results, we simply need to add 300 to the offset and repeat until the offset is greater than the count of all records. Another way of detecting the last page of results is by checking for when the `endOfRecords` attribute of the response object changes to `True`. \n",
     "\n",
-    "Below we implement such a loop, saving each page of results to a dataframe."
+    "Below we implement such a loop to collect all 1456 frog occurences from 1800 to 2022 in the Richmond location, saving each page of results to a dataframe."
    ]
   },
   {
@@ -468,12 +464,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualising the dataset"
+    "### Visualising the dataset\n",
+    "\n",
+    "Below we can see the species distribution of all frog occurrences."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +480,7 @@
        "<AxesSubplot:title={'center':'Count of Frog Occurrences by Species (Richmond NSW, 1890-2021)'}, xlabel='species'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,12 +522,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To simplify the dataset, we will only keep the location and date of each frog sighting."
+    "To simplify the dataset, we will only keep the location and date of each frog sighting and discard other information like species. We will also add an `occurrenceStatus` attribute to indicate frog presence (which will be necessary later when we add frog absences)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +657,7 @@
        "[1456 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -725,14 +723,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations, you have successfuly found frogs! But in addition to knowing where frogs are, we must also know where they aren't. To achieve this, we will assume that if a location has no observed frogs, that it actually has no frogs. This has some obvious flaws, but its a good start. Developing a smarter way to sample for frog absence could be an avenue worth persuing in your model optimisation process.\n",
+    "Congratulations, you have successfuly found frogs! But in addition to knowing where frogs are, for the model that we plan to train we must also know where they aren't. To achieve this, we will assume that if a location has no observed frogs, that it actually has no frogs. This has some obvious flaws, but its a good start. Developing a smarter way to sample for frog absence could be an avenue worth persuing in your model optimisation process.\n",
     "\n",
     "To sample for frog absence, we will perform a sliding window across the map above. If there are no frogs within the sliding region, we will save the midpoint of that region as a point where frogs do not occur. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +913,7 @@
        "[1456 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,12 +938,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualise final dataset"
+    "### Visualise final dataset\n",
+    "\n",
+    "Below is a map of our final dataset. The frog occurrences are green points, while the frog-absent points are yellow."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
        "Text(0.5, 1.0, 'Frogs (Green) and Frog Absence (Yellow) for Richmond NSW (1890-2021)')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1004,12 +1004,12 @@
    "source": [
     "### Prepare and save to file\n",
     "\n",
-    "Finally, we are left with a table containing the geolocations of frog sightings, as well as locations of frog absence in Richmond, NSW. These data should be used as the ground truth of your algorithm."
+    "Finally, we are left with a table containing the geolocations of frog sightings, as well as locations of frog absence in Richmond, NSW. These data will be the ground truth of our algorithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
