--- a/Model_Level_1.ipynb
+++ b/Model_Level_1.ipynb
@@ -49,6 +49,8 @@
     "\n",
     "# Machine Learning\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score, accuracy_score, ConfusionMatrixDisplay\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "# Geospatial\n",
     "import geopandas as gpd\n",
@@ -776,7 +778,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa6bc144400>"
+       "<matplotlib.legend.Legend at 0x7f02c6f788e0>"
       ]
      },
      "execution_count": 11,
@@ -1158,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4b014512-659b-4f72-9102-b2b31c51bd88",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6a306561-6f2b-4f0d-9ede-b98b702ac226",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1246,9 @@
    "source": [
     "#### In-Sample Evaluation\n",
     "\n",
-    "Now that we have our model predictions for the training set stored in the `predictions` variable, we can calculate some performance metrics to guage the effectiveness of the model. Again, it must be stressed that this is the in-sample performance - the performance on the training set. Hence, the values will tend to overestimate its performance. Additionally, the training set itself is biased and this notebook made no effort to address this. The model evaluation metrics are only as good as the test data, so the metrics themselves will also be biased. Thus, these metrics are NOT truly indicative of this model's performance.\n"
+    "Now that we have our model predictions for the training set stored in the `predictions` variable, we can calculate some performance metrics to guage the effectiveness of the model. Again, it must be stressed that this is the in-sample performance - the performance on the training set. Hence, the values will tend to overestimate its performance. Additionally, the training set itself is biased and this notebook made no effort to address this. The model evaluation metrics are only as good as the test data, so the metrics themselves will also be biased. Thus, these metrics are NOT truly indicative of this model's performance.\n",
+    "\n",
+    "In this example, we will use `f1_score` and `accuracy_score` from Scikit-learn. Scikit-learn provides many other metrics that can be used for evaluation. You can even code your own if you think it will assist you in evaluating your model.\n"
    ]
   },
   {
@@ -1263,8 +1267,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import f1_score, accuracy_score, ConfusionMatrixDisplay\n",
-    "\n",
     "print(f\"F1 Score: {np.mean(f1_score(y, predictions)).round(2)}\")\n",
     "print(f\"Accuracy: {np.mean(accuracy_score(y, predictions)).round(2)}\")"
    ]
@@ -1320,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "1afb12b7-395d-4741-8ed6-0487f6d611d6",
    "metadata": {},
    "outputs": [
@@ -1401,14 +1403,14 @@
     "\n",
     "When evaluating a machine learning model, it is essential to correctly and fairly evaluate the model's ability to generalise. This is because models have a tendancy to overfit the dataset they are trained on. To estimate the out-of-sample performance, we will use k-fold cross-validation. This technique involves splitting the training dataset into folds, in this case we will use 10. Each iteration, the model is trained on all but one of the folds, which is reserved for testing. This is repeated until all folds have been left out once. At the end of the process, we will have 10 metrics which can be averaged, giving a more reliable and valid measure of model performance. \n",
     "\n",
-    "`Scikit-learn` has built-in functions that can assist in k-fold cross validation. In particular, we will use `StratifiedKFold` to split our data into folds, ensuring there is always a balanced number of frogs and non-frogs in each fold.\n",
+    "Scikit-learn has built-in functions that can assist in k-fold cross validation. In particular, we will use `StratifiedKFold` to split our data into folds, ensuring there is always a balanced number of frogs and non-frogs in each fold.\n",
     "\n",
     "Again, these metrics are derived from a biased sample, so be careful what you infer.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f41e992d-08cd-4ce6-9330-852263bd0b22",
    "metadata": {},
    "outputs": [
@@ -1434,8 +1436,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
     "cv_model = LogisticRegression()\n",
     "\n",
     "n_folds = 10\n",
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "d239a36d-4d40-4ce8-ace4-ccad12bc0924",
    "metadata": {},
    "outputs": [
