began reworking model 3

--- a/Model_Level_1_one_species.ipynb
+++ b/Model_Level_1_one_species.ipynb
@@ -13,16 +13,16 @@
     "\n",
     "| Challenge | Locations                     | Spatial Res        | Species          | Satellite Data                                                |\n",
     "|-----------|-------------------------------|--------------------|------------------|---------------------------------------------------------------|\n",
-    "|***1***    | Australia                     | Coarse (res=1000)  | 1 of 23 Species  | TerraClimate                                                  |\n",
-    "| 2         | Australia, Costa Rica         | Moderate (res=100) | 23 Species       | TerraClimate, Sentinel-2                                      |\n",
-    "| 3         | Australia, Costa Rica,<br>Europe | Fine (res=10)   | 23 Species       | TerraClimate, Sentinel-2,<br>Land cover, water extent, elevation |\n",
+    "|***1***    | Australia                     | Coarse ($4km$)  | 1 of 23 species  | TerraClimate                                                  |\n",
+    "| 2         | Australia, Costa Rica         | Moderate ($1km$) | 5 of 23 species       | TerraClimate, Sentinel-2                                      |\n",
+    "| 3         | Australia, Costa Rica,<br>Europe | Fine ($10m$)   | 23 of all species    | TerraClimate, Sentinel-2,<br>Land cover, water extent, elevation |\n",
     "\n",
     "\n",
     "In this notebook, we will demonstrate a basic model workflow that can act as a starting point for the challenge. As specified in the first row of the table above, we will restrict this model to regions in Australia at coarse resolution (4kmx4km), predicting one species against the rest of the 23 specified species using only [TerraClimate](https://planetarycomputer.microsoft.com/dataset/terraclimate) predictor variables. In particular, we will be using four features from the TerraClimate dataset, the maximum monthly temperature, the minimum monthly temperature, the mean monthly precipitation, and the mean soil moisture, and will train a logistic regression model with these data. The TerraClimate data is sampled at a monthly temporal resolution, so metrics are calculated over the time dimension to simplify the features. We restrict this analysis to a five year window from the start of 2015 to the end of 2019, and will make the assumption that frog occurrences within that time period are representative of the entire time period (i.e. the frogs take longer than 5 years to move). \n",
     "\n",
     "Most of the functions present in this notebook were adapted from the following notebooks:\n",
-    "- [TerraClimate/Weather](Weather.ipynb)\n",
     "- [GBIF/Frog](Frogs.ipynb)\n",
+    "- [TerraClimate/Weather](Weather.ipynb)\n",
     "\n",
     "Again, it must be noted that this notebook is just a starting point. We make plenty of assumptions in this notebook that you may not think is best for solving the challenge effectively. You are encouraged to modify these functions, to rewrite them completely, or to try a different approach entirely.\n"
    ]
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "9d75a397-ae04-48ae-89bd-406a209be3dd",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "Text(0.5, 1.0, 'Greater Sydney, NSW')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "# Penrith, NSW\n",
+    "# Greater Sydney, NSW\n",
     "region_name = 'Greater Sydney, NSW'\n",
     "min_lon, min_lat = (150.15, -34.25)  # Lower-left corner\n",
     "max_lon, max_lat = (151.15, -33.25)  # Upper-right corner\n",
@@ -133,60 +133,6 @@
    "source": [
     "#### Fetching Frog Response Variable\n",
     "Before we can build our model, we need to query the GBIF API to obtain the frog occurrence data for our region. If you have not checked out the [frog notebook](Frogs.ipynb) yet, we recommend you do before moving on so you can better understand the following functions. The code from that notebook is wrapped up in the `get_frogs` function defined below. This function will obtain all frog occurrences for the given region in the five years from the start of 2015 to the end of 2019. It returns a geopandas dataframe of each occurrence, its species, and its latitude and longitude coordinates. The challenge restricts the species to the 23 specified in the ['australian_frogs.csv'](australian_frogs.csv) file. Note that not all 23 will be present for a given area."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5b527043-a5bc-48f7-8d5b-22c33ac6de30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_frogs(bbox, query_params, crs = {'init':'epsg:4326'}, orderKey=\"952\", verbose=False):\n",
-    "        \"\"\"Returns the dataframe of all frog occurrences for the bounding box specified.\"\"\"\n",
-    "        \n",
-    "        # Set query parameters\n",
-    "        min_lon, min_lat, max_lon, max_lat = bbox\n",
-    "        limit = 300\n",
-    "        offset = 0\n",
-    "        parameters = {\n",
-    "            **query_params,\n",
-    "            \"orderKey\":orderKey, # The order Anura (frogs) is indicated by key 952\n",
-    "            \"decimalLatitude\":f\"{min_lat},{max_lat}\", # Latitude range\n",
-    "            \"decimalLongitude\":f\"{min_lon},{max_lon}\", # Longitude range\n",
-    "            \"limit\":limit,\n",
-    "            \"offset\":offset\n",
-    "        }\n",
-    "        \n",
-    "        # Query API\n",
-    "        frogs = pd.DataFrame()\n",
-    "        while True:\n",
-    "            # Fetch results\n",
-    "            parameters['offset'] = offset\n",
-    "            response = requests.get(\"https://api.gbif.org/v1/occurrence/search\", params = parameters).json()\n",
-    "            total = response['count']\n",
-    "            \n",
-    "            # Print progress\n",
-    "            print(f\"{offset} of {total}\") if verbose else None\n",
-    "            \n",
-    "            # Add results to dataframe\n",
-    "            frogs = frogs.append(\n",
-    "                pd.DataFrame(response['results'])\n",
-    "                [[\"decimalLatitude\", \"decimalLongitude\", \"species\", \"speciesKey\"]]\n",
-    "                .assign(\n",
-    "                    occurrenceStatus = 1\n",
-    "                )\n",
-    "            )\n",
-    "            if response['endOfRecords']:\n",
-    "                break\n",
-    "            offset += limit\n",
-    "            \n",
-    "        geo_frogs = gpd.GeoDataFrame(\n",
-    "            frogs.reset_index(drop=True), \n",
-    "            geometry=gpd.points_from_xy(frogs.decimalLongitude, frogs.decimalLatitude),\n",
-    "            crs=crs\n",
-    "        )\n",
-    "        return geo_frogs"
    ]
   },
   {
