--- a/Model_Level_1_one_species.ipynb
+++ b/Model_Level_1_one_species.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "| Challenge | Locations                     | Spatial Res        | Species          | Satellite Data                                                |\n",
     "|-----------|-------------------------------|--------------------|------------------|---------------------------------------------------------------|\n",
-    "|***1***    | Australia                     | Coarse ($4km$)  | 1 of 23 species  | TerraClimate                                                  |\n",
-    "| 2         | Australia, Costa Rica         | Moderate ($1km$) | 5 of 23 species       | TerraClimate, Sentinel-2                                      |\n",
-    "| 3         | Australia, Costa Rica,<br>Europe | Fine ($10m$)   | 23 of all species    | TerraClimate, Sentinel-2,<br>Land cover, water extent, elevation |\n",
+    "|***1***    | Australia                     | Coarse (4km)  | 1 of 23 species  | TerraClimate                                                  |\n",
+    "| 2         | Australia, Costa Rica         | Moderate (1km) | 5 of 23 species       | TerraClimate, Sentinel-2                                      |\n",
+    "| 3         | Australia, Costa Rica,<br>Europe | Fine (10m)   | 23 of all species    | TerraClimate, Sentinel-2,<br>Land cover, water extent, elevation |\n",
     "\n",
     "\n",
     "In this notebook, we will demonstrate a basic model workflow that can act as a starting point for the challenge. As specified in the first row of the table above, we will restrict this model to regions in Australia at coarse resolution (4kmx4km), predicting one species against the rest of the 23 specified species using only [TerraClimate](https://planetarycomputer.microsoft.com/dataset/terraclimate) predictor variables. In particular, we will be using four features from the TerraClimate dataset, the maximum monthly temperature, the minimum monthly temperature, the mean monthly precipitation, and the mean soil moisture, and will train a logistic regression model with these data. The TerraClimate data is sampled at a monthly temporal resolution, so metrics are calculated over the time dimension to simplify the features. We restrict this analysis to a five year window from the start of 2015 to the end of 2019, and will make the assumption that frog occurrences within that time period are representative of the entire time period (i.e. the frogs take longer than 5 years to move). \n",
@@ -627,7 +627,7 @@
    "id": "09764dff-bb95-4431-ac0d-d1f296e849eb",
    "metadata": {},
    "source": [
-    "Clearly, there is quite a large class imbalance here. To handle this, we will only take a random sample of non-target species frogs so that their numbers match that of the target species. Note that this is quite a naive approach as an isolated frog occurrence may be lost while clusters of occurrences are more likely to persist. This may not be ideal, as these isolated occurrences are often the most important data points available for frog conservationists. Developing a smarter sampling method may be a worthwhile pursuit when considering ways to improve your model."
+    "Clearly, there is quite a large class imbalance here. To handle this, we will down-sample the non-target species frogs so that their numbers match that of the target species. Note that this is quite a naive approach as an isolated frog occurrence may be lost while clusters of occurrences are more likely to persist. This may not be ideal, as these isolated occurrences are often the most important data points available for frog conservationists. Developing a smarter sampling method may be a worthwhile pursuit when considering ways to improve your model."
    ]
   },
   {
@@ -672,7 +672,7 @@
    "id": "a4c84370-31b1-4b8c-93f5-da0d544fda38",
    "metadata": {},
    "source": [
-    "After sampling for frog absence, we finally have our training data visualised below. Again, it must be stressed that this is just one way of addressing the sampling bias inherent in the GBIF data and it does not address the bias completely. Since we will be using this training dataset for evaluation, the evaluation metrics will also contain bias. You are encouraged to improve the training set collection process, particularly the frog absence sampling, until you are confident in its ability to accurately train and evaluate your model. For now, we will continue with this training set."
+    "After balancing the classes, we finally have our training data visualised below. Again, it must be stressed that this is just one way of addressing the sampling bias inherent in the GBIF data and it does not address the bias completely. Since we will be using this training dataset for evaluation, the evaluation metrics will also contain bias. You are encouraged to improve the training set collection process, particularly the frog absence sampling, until you are confident in its ability to accurately train and evaluate your model. For now, we will continue with this training set."
    ]
   },
   {
