--- a/draft_notebooks/Brian_Weather.ipynb
+++ b/draft_notebooks/Brian_Weather.ipynb
@@ -3921,9 +3921,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ey_ds",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ey_ds-py"
   },
   "language_info": {
    "codemirror_mode": {
