clean up structure

--- a/data/dataset_summary.ipynb
+++ b/data/dataset_summary.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import zipfile\n",
-    "with zipfile.ZipFile('./0128886-210914110416597.zip', 'r') as zip_ref:\n",
+    "with zipfile.ZipFile('./GBIF_training_data.zip', 'r') as zip_ref:\n",
     "    zip_ref.extractall('./training_data/')"
    ]
   },
