--- a/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
+++ b/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5652ce4c-c75d-4484-a43a-31ffcf7a2b97",
    "metadata": {
     "tags": []
@@ -72,6 +72,7 @@
     "# Geospatial\n",
     "import contextily as cx\n",
     "import xarray as xr\n",
+    "import zarr # Not referenced, but required for xarray\n",
     "\n",
     "# Import Planetary Computer tools\n",
     "import fsspec\n",
@@ -79,6 +80,7 @@
     "\n",
     "# Other\n",
     "import os\n",
+    "import zipfile\n",
     "from itertools import cycle\n",
     "\n",
     "# Path to data folder with provided material\n",
@@ -97,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "cf305264-0afd-40c3-a9b1-3b782593ee84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(data_path+'/training_data/'):\n",
-    "    os.mkdir(data_path+'/training_data/')\n",
-    "    with zipfile.ZipFile(data_path+'/GBIF_training_data.zip', 'r') as zip_ref:\n",
-    "        zip_ref.extractall(data_path+'/training_data/')\n",
+    "if not os.path.exists(data_path+'training_data/'):\n",
+    "    os.mkdir(data_path+'training_data/')\n",
+    "    with zipfile.ZipFile(data_path+'GBIF_training_data.zip', 'r') as zip_ref:\n",
+    "        zip_ref.extractall(data_path+'training_data/')\n",
     "        \n",
     "def filter_bbox(frogs, bbox):\n",
     "    frogs = frogs[lambda x: \n",
@@ -135,7 +137,7 @@
     "        'GT':'Central America','LS':'Africa','SV':'Central America','AO':'Africa', np.nan:'unknown or invalid' \n",
     "    }\n",
     "    frogs = (\n",
-    "        pd.read_csv(data_path+'./training_data/occurrence.txt', sep='\\t', parse_dates=['eventDate'])\n",
+    "        pd.read_csv(data_path+'training_data/occurrence.txt', sep='\\t', parse_dates=['eventDate'])\n",
     "        .assign(\n",
     "            country =  lambda x: x.countryCode.map(country_names),\n",
     "            continent =  lambda x: x.countryCode.map(continent_names),\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9d75a397-ae04-48ae-89bd-406a209be3dd",
    "metadata": {},
    "outputs": [
@@ -357,7 +359,7 @@
        "[9418 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
