--- a/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
+++ b/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# 2022 EY Data Science Challenge - Level 1\n",
+    "# Level 1: Local Frog Discovery Tooll benchmark notebook\n",
     "\n",
     "## Challenge Level 1 Overview\n",
     "\n",
