--- a/notebooks/supplementary_notebooks/Sentinel-2_precomputed_mosaics.ipynb
+++ b/notebooks/supplementary_notebooks/Sentinel-2_precomputed_mosaics.ipynb
@@ -13,7 +13,7 @@
     "* Our regions in Australia, South Africa and Costa Rica cover 75-million square kilometers.\n",
     "* There are nearly 80,000 Sentinel-2 scenes and 64-Terrabytes of data over these regions in one year.\n",
     "* Our 2019 median mosaic is 434 GB of data which is 150x smaller than the baseline scene data.\n",
-    "* The mosaic product is stored in about 11,300 tiles covering 0.25-degree square latitude/longitude blocks.\n"
+    "* The mosaic product is stored in about 11,300 tiles covering 0.25-degree square latitude/longitude blocks.\n",
     "* The mosaic took 20 hours to produce using 800 parallel virtual machines (VM). It would take one free Azure VM nearly 2 years to create the same product!\n",
     "\n",
     "The full Sentinel-2 data is still available, so you may wish to create your own custom mosaics that cover additional bands captured by Sentinel-2. We have extensive documentation on how best to query the Sentinel-2 data and manage the computational load required to compute your own mosaics. \n"
