Fixed precomputed mosaic function

--- a/notebooks/supplementary_notebooks/Sentinel-2_precomputed_mosaics.ipynb
+++ b/notebooks/supplementary_notebooks/Sentinel-2_precomputed_mosaics.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "import xrspatial.multispectral as ms\n",
     "\n",
     "# Import function to obtain the precomputed mosaics\n",
-    "from sentinel_mosaic import get_mosaic"
+    "from SentinelMosaic import SentinelMosaic"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,23 +68,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise mosaic downloader\n",
+    "mosaic_downloader = SentinelMosaic(download_path='./data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-83.0, 8.0, -82.75, 8.25)\n",
-      "(-83.25, 8.0, -83.0, 8.25)\n",
-      "(-83.0, 8.25, -82.75, 8.5)\n",
-      "(-83.25, 8.25, -83.0, 8.5)\n",
       "4 scenes intersect\n"
      ]
     }
    ],
    "source": [
-    "median = get_mosaic(bbox)"
+    "# Use the get_mosaic function to retrieve the relevant tiles for a given bounding box. \n",
+    "# This function will download the relevant tiles to the download_path if it hasn't already, then it will read in the files and crop it to the bbox specified. \n",
+    "median = mosaic_downloader.get_mosaic(bbox)"
    ]
   },
   {
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +206,7 @@
        "(4000, 4000)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 frog frog 124M Mar  2 08:12 S2_mosaic_sample2.tiff\n"
+      "-rw-rw-r-- 1 frog frog 124M May 17 08:28 S2_mosaic_sample2.tiff\n"
      ]
     }
    ],
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -307,9 +315,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ey_test_2",
+   "display_name": "ey_test",
    "language": "python",
-   "name": "conda-env-ey_test_2-py"
+   "name": "conda-env-ey_test-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
